@@ -15,8 +15,10 @@ sampler.sobol.supersampling = 1
 sampler.sobol.overlapping = 1
 renderengine.type = "PATHCPU"
 sampler.type = "SOBOL"
-film.width = 960
-film.height = 540
+#film.width = 960
+#film.height = 540
+film.width = 1920
+film.height = 1080
 film.filter.type = "BLACKMANHARRIS"
 film.filter.width = 1.5
 lightstrategy.type = "LOG_POWER"
